--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,22 @@
 			<version>2.6</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.eclipse.persistence/org.eclipse.persistence.jpa -->
+		<dependency>
+			<groupId>org.eclipse.persistence</groupId>
+			<artifactId>org.eclipse.persistence.jpa</artifactId>
+			<version>2.7.1</version>
+		</dependency>
+ 
+		<!-- https://mvnrepository.com/artifact/org.apache.openjpa/openjpa-persistence-jdbc -->
+		<!-- 
+		<dependency>
+			<groupId>org.apache.openjpa</groupId>
+			<artifactId>openjpa-persistence-jdbc</artifactId>
+			<version>2.4.2</version>
+		</dependency>
+ -->
+ 
 		<!-- Log4j2 -->
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
