--- a/pom.xml
+++ b/pom.xml
@@ -17,13 +17,6 @@
 	</properties>
 
 	<dependencies>
-		<!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
-		<dependency>
-			<groupId>org.xerial</groupId>
-			<artifactId>sqlite-jdbc</artifactId>
-			<version>3.21.0.1</version>
-		</dependency>
-
 		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
 		<dependency>
 			<groupId>commons-io</groupId>
@@ -37,16 +30,14 @@
 			<artifactId>org.eclipse.persistence.jpa</artifactId>
 			<version>2.7.1</version>
 		</dependency>
- 
-		<!-- https://mvnrepository.com/artifact/org.apache.openjpa/openjpa-persistence-jdbc -->
-		<!-- 
+
+		<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
 		<dependency>
-			<groupId>org.apache.openjpa</groupId>
-			<artifactId>openjpa-persistence-jdbc</artifactId>
-			<version>2.4.2</version>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.196</version>
 		</dependency>
- -->
- 
+
 		<!-- Log4j2 -->
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
