--- a/pom.xml
+++ b/pom.xml
@@ -57,4 +57,23 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
+	<!-- mvn clean compile assembly:single -->
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>it.flavio.snk.Main</mainClass>
+						</manifest>
+					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
